# shroud

./: .dir-locals.el  .gitignore  Makefile.am  README  configure.ac  package.scm  pre-inst-env.in
scripts/: shroud.in
shroud/: config.scm  config.scm.in  secret.scm  ui.scm  utils.scm
shroud/ui/: hide.scm  list.scm  remove.scm  show.scm
